work completed but not finished

--- a/index.html
+++ b/index.html
@@ -11,93 +11,97 @@
 
     <div class="navbar">
       <ul>
-        <li>YOUR LOGO</li>
-        <li>Home</li>
-        <li>Pricing</li>
-        <li>Contact</li>
+        <li class="navmenu">YOUR LOGO</li>
+        <li class="navmenu">Home</li>
+        <li class="navmenu">Pricing</li>
+        <li class="navmenu">Contact</li>
       </ul>
     </div>
 
     <div class="photobar">
-      <p>Simple Pricing.<br>Try before you buy.</p>
+      <p class="textphotobar">Simple Pricing.<br>Try before you buy.</p>
     </div>
 
-    <div class="boxbox">
-      <div class="greenbox">
+    <div class="leftbox">
+        <div class="greenbox">
         <h3 class="top">PERSONAL</h3>
         <h1>$5</h1>
         <h3 class="bottom">PER MONTH</h3>
-      </div>
-      <div>
-        <ul>
-          <li>Free setup</li>
-          <li>Custom sub-domain</li>
-          <li>Standard customer support</li>
-          <li>1GB file storage</li>
-          <li>1 database</li>
-          <li>Unlimited bandwidth</li>
+        </div>
+      <div class="lefttext">
+          <p class="line">Free setup</p>
+          <p class="line">Custom sub-domain</p>
+          <p class="line">Standard customer support</p>
+          <p class="line">1GB file storage</p>
+          <p class="line">1 database</p>
+          <p class="line">Unlimited bandwidth</p>
         </ul>
       </div>
-      <div class="choosebutton">
+      <div class="choosebox">
+          <p class="choosebutton">Choose</p>
       </div>
     </div>
 
-    <div class="boxbox">
+    <div class="centerbox">
       <div class="bluebox">
         <h3 class="top">SMALL BUSINESS</h3>
         <h1>$25</h1>
         <h3 class="bottom">PER MONTH</h3>
       </div>
-      <div>
-        <ul>
-          <li>Free setup</li>
-          <li>Use your own domain</li>
-          <li>Standard customer support</li>
-          <li>10GB file storage</li>
-          <li>5 databases</li>
-          <li>Unlimited bandwidth</li>
-        </ul>
+      <div class="centertext">
+          <p class="line">Free setup</li>
+          <p class="line">Use your own domain</li>
+          <p class="line">Standard customer support</li>
+          <p class="line">10GB file storage</li>
+          <p class="line">5 databases</li>
+          <p class="line">Unlimited bandwidth</li>
       </div>
-      <div class="choosebutton">
+      <div class="choosebox">
+        <p class="choosebutton">Choose</p>
       </div>
     </div>
 
-    <div class="boxbox">
+    <div class="rightbox">
       <div class="blackbox">
         <h3 class="top">ENTERPRISE</h3>
         <h1>$45</h1>
         <h3 class="bottom">PER MONTH</h3>
       </div>
-      <div>
-        <ul>
-          <li>Free setup</li>
-          <li>Use your own domain</li>
-          <li>Premium customer support</li>
-          <li>Unlimited file storage</li>
-          <li>25 databases</li>
-          <li>Unlimited bandwidth</li>
-        </ul>
+      <div class="righttext">
+          <p class="line">Free setup</li>
+          <p class="line">Use your own domain</li>
+          <p class="line">Premium customer support</li>
+          <p class="line">Unlimited file storage</li>
+          <p class="line">25 databases</li>
+          <p class="line">Unlimited bandwidth</li>
       </div>
-      <div class="choosebutton">
+      <div class="choosebox">
+        <p class="choosebutton">Choose</p>
       </div>
     </div>
 
     <div class="textboxes">
       <div class="get">
         <h4>GET STARTED TODAY</h4>
-          <p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
       </div>
       <div class="pay">
         <h4>PAY MONTHLY OR ANNUALLY</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
       </div>
-      <div class="247">
+      <div class="allday">
         <h4>24/7 CUSTOMER SUPPORT</h4>
+        <p>Cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </div>
       <div class="cancel">
         <h4>CANCEL YOUR PLAN ANYTIME</h4>
+        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
     </div>
 
+    <div class="bottomofpage">
+      <p><a href="#">Try now</a> for 14 days. No credit card required. Header image courtesy of <a href="#">Unsplash</a>.</p> 
+    </div>
   </div>
 
   </body>
